--- a/Portfolio.html
+++ b/Portfolio.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Студія</title>
+    <title>Портфоліо</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
         integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -14,7 +14,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./CSS/styles.css">
+    <link rel="stylesheet" href="./CSS/main.min.css">
 </head>
 
 <body>
@@ -24,8 +24,8 @@
             <nav class="navigation">
                 <ul class="navigation-list list">
                     <li class="navigation-list__item"><a href="./index.html"
-                            class="navigation__link link current">Студия</a></li>
-                    <li class="navigation-list__item"><a href="./Portfolio.html" class="navigation__link link">Портфолио</a>
+                            class="navigation__link link">Студия</a></li>
+                    <li class="navigation-list__item"><a href="./Portfolio.html" class="navigation__link link current">Портфолио</a>
                     </li>
                     <li class="navigation-list__item"><a href="#" class="navigation__link link">Контакты</a></li>
                 </ul>
@@ -52,158 +52,158 @@
     </header>
 
     <main>
-        <section class="main-portfolio">
+        <section class="projects-section">
             <div class="container">
-                <h1 class="hidden">Портфолио</h1>
-                <ul class="buttons-list">
-                    <li class="buttons-item"><button type="button" class="button-studio">Все</button></li>
-                    <li class="buttons-item"><button type="button" class="button-studio">Веб-сайты</button></li>
-                    <li class="buttons-item"><button type="button" class="button-studio">Приложения</button></li>
-                    <li class="buttons-item"><button type="button" class="button-studio">Маркетинг</button></li>
-                    <li class="buttons-item"><button type="button" class="button-studio">Дизайн</button></li>
+                <h1 class="projects-section__title" hidden>Портфолио</h1>
+                <ul class="buttons list">
+                    <li class="buttons__item"><button type="button" class="buttons__item--decor">Все</button></li>
+                    <li class="buttons__item"><button type="button" class="buttons__item--decor">Веб-сайты</button></li>
+                    <li class="buttons__item"><button type="button" class="buttons__item--decor">Приложения</button></li>
+                    <li class="buttons__item"><button type="button" class="buttons__item--decor">Маркетинг</button></li>
+                    <li class="buttons__item"><button type="button" class="buttons__item--decor">Дизайн</button></li>
                 </ul>
-                <ul class="projects-list">
-                    <li class="projects-item">
+                <ul class="projects-section__list list">
+                    <li class="projects-section__item">
                         <a>
                             <div class="project-card">
                                 <img src="./images/tehnokryak.jpg" alt="Изображения карточек нашей команды" width="370">
-                                <div class="card-description">
-                                    <p class="card-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+                                <div class="project-card__description">
+                                    <p class="project-card__text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
                                         позволит посетителю получить
                                         исчерпывающие сведения о компании или частном лице.</p>
                                 </div>
                             </div>                            
-                            <div class="border-bg">
-                                <h2 class="projects-title">Технокряк</h2>
-                                <p class="projects-discription">Веб-сайт</p>
+                            <div class="project-meta">
+                                <h2 class="projects-meta__title">Технокряк</h2>
+                                <p class="projects-meta__description">Веб-сайт</p>
                             </div>
                         </a>
                     </li>
-                    <li class="projects-item">
+                    <li class="projects-section__item">
                         <a>
                             <div class="project-card">
                                 <img src="./images/new-orlean.jpg" alt="Изображения карточек нашей команды" width="370">
-                                <div class="card-description">
-                                    <p class="card-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+                                <div class="project-card__description">
+                                    <p class="project-card__text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
                                         позволит посетителю получить
                                         исчерпывающие сведения о компании или частном лице.</p>
                                 </div>
                             </div>
-                            <div class="border-bg">
-                                <h2 class="projects-title">Постер New Orlean vs Golden Star</h2>
-                                <p class="projects-discription">Дизайн</p>
+                            <div class="project-meta">
+                                <h2 class="projects-meta__title">Постер New Orlean vs Golden Star</h2>
+                                <p class="projects-meta__description">Дизайн</p>
                             </div>
                         </a>
                     </li>
-                    <li class="projects-item">
+                    <li class="projects-section__item">
                         <a>
                             <div class="project-card">
                                 <img src="./images/seafood.jpg" alt="Изображения карточек нашей команды" width="370">
-                                <div class="card-description">
-                                    <p class="card-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+                                <div class="project-card__description">
+                                    <p class="project-card__text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
                                         позволит посетителю получить
                                         исчерпывающие сведения о компании или частном лице.</p>
                                 </div>
                             </div>
-                            <div class="border-bg">
-                                <h2 class="projects-title">Ресторан Seafood</h2>
-                                <p class="projects-discription">Приложение</p>
+                            <div class="project-meta">
+                                <h2 class="projects-meta__title">Ресторан Seafood</h2>
+                                <p class="projects-meta__description">Приложение</p>
                             </div>
                         </a>
                     </li>
-                    <li class="projects-item">
+                    <li class="projects-section__item">
                         <a>
                             <div class="project-card">
                                 <img src="./images/prime.jpg" alt="Изображения карточек нашей команды" width="370">
-                                <div class="card-description">
-                                    <p class="card-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+                                <div class="project-card__description">
+                                    <p class="project-card__text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
                                         позволит посетителю получить
                                         исчерпывающие сведения о компании или частном лице.</p>
                                 </div>
                             </div>
-                            <div class="border-bg">
-                                <h2 class="projects-title">Проект Prime</h2>
-                                <p class="projects-discription">Маркетинг</p>
+                            <div class="project-meta">
+                                <h2 class="projects-meta__title">Проект Prime</h2>
+                                <p class="projects-meta__description">Маркетинг</p>
                             </div>
                         </a>
                     </li>
-                    <li class="projects-item">
+                    <li class="projects-section__item">
                         <a>
                             <div class="project-card">
                                 <img src="./images/boxes.jpg" alt="Изображения карточек нашей команды" width="370">
-                                <div class="card-description">
-                                    <p class="card-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+                                <div class="project-card__description">
+                                    <p class="project-card__text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
                                         позволит посетителю получить
                                         исчерпывающие сведения о компании или частном лице.</p>
                                 </div>
                             </div>
-                            <div class="border-bg">
-                                <h2 class="projects-title">Проект Boxes</h2>
-                                <p class="projects-discription">Приложение</p>
+                            <div class="project-meta">
+                                <h2 class="projects-meta__title">Проект Boxes</h2>
+                                <p class="projects-meta__description">Приложение</p>
                             </div>
                         </a>
                     </li>
-                    <li class="projects-item">
+                    <li class="projects-section__item">
                         <a>
                             <div class="project-card">
                                 <img src="./images/boarder.jpg" alt="Изображения карточек нашей команды" width="370">
-                                <div class="card-description">
-                                    <p class="card-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+                                <div class="project-card__description">
+                                    <p class="project-card__text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
                                         позволит посетителю получить
                                         исчерпывающие сведения о компании или частном лице.</p>
                                 </div>
                             </div>
-                            <div class="border-bg">
-                                <h2 class="projects-title">Inspiration has no Borders</h2>
-                                <p class="projects-discription">Веб-сайт</p>
+                            <div class="project-meta">
+                                <h2 class="projects-meta__title">Inspiration has no Borders</h2>
+                                <p class="projects-meta__description">Веб-сайт</p>
                             </div>
                         </a>
                     </li>
-                    <li class="projects-item">
+                    <li class="projects-section__item">
                         <a>
                             <div class="project-card">
                                 <img src="./images/limited-edition.jpg" alt="Изображения карточек нашей команды" width="370">
-                                <div class="card-description">
-                                    <p class="card-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+                                <div class="project-card__description">
+                                    <p class="project-card__text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
                                         позволит посетителю получить
                                         исчерпывающие сведения о компании или частном лице.</p>
                                 </div>
                             </div>
-                            <div class="border-bg">
-                                <h2 class="projects-title">Издание Limited Edition</h2>
-                                <p class="projects-discription">Дизайн</p>
+                            <div class="project-meta">
+                                <h2 class="projects-meta__title">Издание Limited Edition</h2>
+                                <p class="projects-meta__description">Дизайн</p>
                             </div>
                         </a>
                     </li>
-                    <li class="projects-item">
+                    <li class="projects-section__item">
                         <a>
                             <div class="project-card">
                                 <img src="./images/lab.jpg" alt="Изображения карточек нашей команды" width="370">
-                                <div class="card-description">
-                                    <p class="card-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+                                <div class="project-card__description">
+                                    <p class="project-card__text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
                                         позволит посетителю получить
                                         исчерпывающие сведения о компании или частном лице.</p>
                                 </div>
                             </div>
-                            <div class="border-bg">
-                                <h2 class="projects-title">Проект LAB</h2>
-                                <p class="projects-discription">Маркетинг</p>
+                            <div class="project-meta">
+                                <h2 class="projects-meta__title">Проект LAB</h2>
+                                <p class="projects-meta__description">Маркетинг</p>
                             </div>
                         </a>
                     </li>
-                    <li class="projects-item">
+                    <li class="projects-section__item">
                         <a>
                             <div class="project-card">
                                 <img src="./images/growing-business.jpg" alt="Изображения карточек нашей команды" width="370">
-                                <div class="card-description">
-                                    <p class="card-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+                                <div class="project-card__description">
+                                    <p class="project-card__text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
                                         позволит посетителю получить
                                         исчерпывающие сведения о компании или частном лице.</p>
                                 </div>
                             </div>
-                            <div class="border-bg">
-                                <h2 class="projects-title">Growing Business</h2>
-                                <p class="projects-discription">Приложение</p>
+                            <div class="project-meta">
+                                <h2 class="projects-meta__title">Growing Business</h2>
+                                <p class="projects-meta__description">Приложение</p>
                             </div>
                         </a>
                     </li>
